@@ -1159,7 +1159,8 @@ LISPFUNN(validp,1)
 LISPFUNN(sizeof,1)
 LISPFUNN(bitsizeof,1)
 LISPFUNN(lookup_foreign_variable,2)
-LISPFUNN(foreign_address_value,1)
+LISPFUNN(unsigned_foreign_address,1)
+LISPFUNN(foreign_address_unsigned,1)
 LISPFUNN(foreign_value,1)
 LISPFUNN(set_foreign_value,2)
 LISPFUNN(foreign_type,1)
